--- a/Slides.html
+++ b/Slides.html
@@ -226,7 +226,7 @@ Open source refers to software that is designed to be publicly accessible, allow
 
 ---
 class: .incremental
-# Basic data type in GIS
+## Basic data type in GIS
 - **Raster data** consists of continuous cells or pixels, such as elevation or satellite imagery.
 
 --
@@ -270,17 +270,18 @@ etc...
 ---
 
 ## `terra`: for spatial data analysis
-
-&gt; This package is an attempt to climb on the shoulders of giants (GDAL, PROJ, GEOS, NCDF, GeographicLib, Rcpp, R).
+This package is an attempt to climb on the shoulders of giants (GDAL, PROJ, GEOS, NCDF, GeographicLib, Rcpp, R).
 
 - `terra` provides methods to manipulate geographic (spatial) data in "raster" and "vector" form.
 
 - **Vector** spatial data (points, lines, polygons) are typically used to represent discrete spatial entities, such as a road, country, or bus stop
 
+.footnote[https://rspatial.org/]
+
 ---
-# Adding basic Map in to the slides 
-<div class="leaflet html-widget html-fill-item" id="htmlwidget-12d60fc41dc756f2afc0" style="width:100%;height:504px;"></div>
-<script type="application/json" data-for="htmlwidget-12d60fc41dc756f2afc0">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[23.156644,72.66441,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircles","args":[23.156644,72.66441,300,null,null,{"interactive":true,"className":"","stroke":true,"color":"#F00","weight":5,"opacity":0.5,"fill":true,"fillColor":"#F00","fillOpacity":0.2},null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null,null]},{"method":"addMiniMap","args":[null,null,"bottomright",150,150,19,19,-5,false,false,false,false,false,false,{"color":"#ff7800","weight":1,"clickable":false},{"color":"#000000","weight":1,"clickable":false,"opacity":0,"fillOpacity":0},{"hideText":"Hide MiniMap","showText":"Show MiniMap"},[]]}],"setView":[[23.156644,72.66441],11,[]],"limits":{"lat":[23.156644,23.156644],"lng":[72.66441,72.66441]}},"evals":[],"jsHooks":[]}</script>
+## Adding basic Map in to the slides 
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-4b33b9b021ce1bcf8870" style="width:100%;height:504px;"></div>
+<script type="application/json" data-for="htmlwidget-4b33b9b021ce1bcf8870">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[23.156644,72.66441,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addCircles","args":[23.156644,72.66441,300,null,null,{"interactive":true,"className":"","stroke":true,"color":"#F00","weight":5,"opacity":0.5,"fill":true,"fillColor":"#F00","fillOpacity":0.2},null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null,null]},{"method":"addMiniMap","args":[null,null,"bottomright",150,150,19,19,-5,false,false,false,false,false,false,{"color":"#ff7800","weight":1,"clickable":false},{"color":"#000000","weight":1,"clickable":false,"opacity":0,"fillOpacity":0},{"hideText":"Hide MiniMap","showText":"Show MiniMap"},[]]}],"setView":[[23.156644,72.66441],11,[]],"limits":{"lat":[23.156644,23.156644],"lng":[72.66441,72.66441]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 class: .incremental
@@ -329,7 +330,7 @@ north(type=3, cex=1)
 
 ---
 
-## This different from the traditional GIS software:
+## This is different from the traditional GIS software:
 &lt;img src="images/Incorrect_Projection.png" class="w-80 br4 dib center"&gt;
 
 .b.blue[Images with different projection (EPSG:32642 and EPSG:32643 image.)]
@@ -420,16 +421,16 @@ plot(b5, main = "NIR", col = gray(0:100 / 100))
 
 ---
 class: .incremental
-# Landsat Bands
+## Landsat Bands
 
 .pull-left[
 
 ```r
 rast_fname &lt;- paste0("./data/LS_8_Band_",c(1:7,10),".tif")
 sample_rast &lt;- rast(rast_fname)
-names(sample_rast) &lt;- c('ultra-blue', 'blue', 'green', 
-                        'red', 'NIR', 'SWIR1', 'SWIR2', 
-                        "TIR")
+names(sample_rast) &lt;- c('ultra-blue', 'blue', 
+                        'green', 'red', 'NIR', 
+                        'SWIR1', 'SWIR2',"TIR")
 
 sample_rast
 ```
@@ -450,15 +451,37 @@ sample_rast
 ```
 ]
 
---
 .pull-right[
 &lt;img src="images/Landsat_Band.jpg" class="w-80 br1 dib center"&gt;
 ]
 
+---
+## Relation between bands
+A scatterplot matrix can be helpful in exploring relationships between raster layers. This can be done with the pairs function. 
+.pull-left[
+
+```r
+pairs(sample_rast[[1:2]], main = "UB versus Blue")
+```
+
+&lt;img src="Slides_files/figure-html/unnamed-chunk-13-1.png" width="100%" /&gt;
+]
+.pull-right[
+
+
+```r
+pairs(sample_rast[[4:5]], main = "Red versus NIR")
+```
+
+&lt;img src="Slides_files/figure-html/unnamed-chunk-14-1.png" width="100%" /&gt;
+
+]
 
 ---
 ## Vegetation indices
-Let’s define a general function for a ratio based (vegetation) index. In the function below, img is a muti-layer SpatRaster object and i and k are the indices of the layers (layer numbers) used to compute the vegetation index.
+Vegetation indices (VIs) provide valuable insights into the health, and distribution of vegetation across landscapes.
+
+&gt; In the function below, img is a muti-layer SpatRaster object and i and k are the indices of the layers (layer numbers) used to compute the vegetation index.
 
 
 ```r
@@ -469,23 +492,191 @@ vi &lt;- function(img, k, i) {
     return(vi)
 }
 ```
-    
-    
-###  For Landsat NIR = 5, red = 4.
+
+---
+##  Compute NDVI and GNDVI with Landsat-8 bands.
+.pull-left[
+The normalized difference vegetation index (NDVI): a metric for quantifying the health and density of vegetation.
 
 ```r
-ndvi &lt;- vi(landsat, 5, 4)
-plot(ndvi, col=rev(terrain.colors(10)), main = "NDVI")
-plot(ndvi, col=rev(rainbow(10)), main="Landsat-NDVI")
+ndvi &lt;- vi(sample_rast, 5, 4)
+plot(ndvi, col=rev(rainbow(10)), main = "NDVI")
+```
+
+&lt;img src="Slides_files/figure-html/unnamed-chunk-16-1.png" width="100%" /&gt;
+]
+
+.pull-right[
+Green Normalized Difference Vegetation Index (GNDVI): estimating photo synthetic activity.
+
+```r
+gndvi &lt;- vi(sample_rast, 5, 3)
+plot(gndvi, col=rev(terrain.colors(10)), main="GNDVI")
+```
+
+&lt;img src="Slides_files/figure-html/unnamed-chunk-17-1.png" width="100%" /&gt;
+]
 
 
-GNDVI &lt;- vi(landsat, 5, 3)
+---
+## Histogram
+.pull-left[
+- To represent the distribution of values contained within our raster using hist to produces a histogram. 
+- Histograms are often useful in identifying **outliers** and bad data values in our raster data.
+
+
+```r
+hist(ndvi, main = "NDVI values", 
+     xlab = "NDVI", 
+     ylab= "Frequency", 
+     col = "#ffaa00", 
+     xlim = c(-0.5, 1),
+     breaks = 30, xaxt = "n")
+
+axis(side=1, at = seq(-0.6, 1, 0.2), 
+     labels = seq(-0.6, 1, 0.2))
+```
+]
+.pull-right[
+&lt;img src="Slides_files/figure-html/unnamed-chunk-19-1.png" width="100%" /&gt;
+]
+
+---
+## Thresholding
+.pull-left[
+We can apply threshold for values such as NDVI range [0.2 - 0.35] 
+- Note that NDVI values are standardized and ranges between -1 to +1. 
+- Higher values indicate more green cover.
+
+
+```r
+classify_mat &lt;- c(-Inf, 0.25, NA, 0.25, 0.3, 1, 0.3, Inf, NA)
+Ranges &lt;- matrix(classify_mat, ncol = 3, byrow = TRUE)
+Ranges
+
+land_class &lt;- classify(ndvi, Ranges)
+plot(land_class, main = 'NDVI between [0.2 - 0.35]')
+```
+]
+.pull-right[
+&lt;img src="Slides_files/figure-html/unnamed-chunk-21-1.png" width="100%" /&gt;
+]
+
+---
+## Thresholding based on multiple class with `classify` function
+.pull-left[
+
+
+```r
+library(RColorBrewer)
+Classes &lt;- c(-1,0.25, 0.3, 0.4, 0.5, 1)
+Class_data &lt;- classify(ndvi, Classes)
+plot(Class_data, 
+     col = brewer.pal(n = 5, name = "Dark2"), 
+     main = 'NDVI based thresholding')
+```
+]
+.pull-right[
+
+&lt;img src="Slides_files/figure-html/unnamed-chunk-23-1.png" width="100%" /&gt;
+]
+
+---
+## Clustering of Data
+Clustering of `NDVI` layer
+
+```r
+set.seed(123)
+nr &lt;- as.data.frame(ndvi, cell=TRUE)
+head(nr)
+```
+
+```
+##    cell        NIR
+## 13   13 0.27633870
+## 14   14 0.17334302
+## 15   15 0.12448494
+## 16   16 0.09909983
+## 17   17 0.11282411
+## 18   18 0.13928502
 ```
 
 ---
-## References
+## K-means clustering of data 
+We create 6 clusters, allow 500 iterations, start with 5 random sets using "Lloyd" method.
+
+```r
+kmncluster &lt;- kmeans(nr[,-1], centers=6, iter.max = 500, nstart = 5, algorithm="Lloyd")
+
+str(kmncluster)
+```
+
+```
+## List of 9
+##  $ cluster     : int [1:505784] 1 4 2 6 2 2 2 2 2 2 ...
+##  $ centers     : num [1:6, 1] 0.259 0.139 0.431 0.197 0.333 ...
+##   ..- attr(*, "dimnames")=List of 2
+##   .. ..$ : chr [1:6] "1" "2" "3" "4" ...
+##   .. ..$ : NULL
+##  $ totss       : num 4787
+##  $ withinss    : num [1:6] 37.5 36.8 33.1 38.1 37.5 ...
+##  $ tot.withinss: num 254
+##  $ betweenss   : num 4533
+##  $ size        : int [1:6] 100008 110257 26403 131142 64238 73736
+##  $ iter        : int 146
+##  $ ifault      : NULL
+##  - attr(*, "class")= chr "kmeans"
+```
+---
+## Visulize the clusters
+
+
+```r
+# Use the ndvi object to set the cluster values to a new raster
+knr &lt;- rast(ndvi, nlyr=1)
+knr[nr$cell] &lt;- kmncluster$cluster
+knr
+```
+
+```
+## class       : SpatRaster 
+## dimensions  : 750, 695, 1  (nrow, ncol, nlyr)
+## resolution  : 30, 30  (x, y)
+## extent      : 250305, 271155, 2551605, 2574105  (xmin, xmax, ymin, ymax)
+## coord. ref. : WGS 84 / UTM zone 43N (EPSG:32643) 
+## source(s)   : memory
+## varname     : LS_8_Band_5 
+## name        : NIR 
+## min value   :   1 
+## max value   :   6
+```
+---
+## Visulize the clusters
+
+
+```r
+mycolor &lt;- c("#fef64b", "#ff0000", "#daa520",
+             "#0000ff", "#00ff00", "#f400f3")
+par(mfrow = c(1,2))
+plot(ndvi, col = rev(terrain.colors(6)), main = "Landsat-NDVI")
+plot(knr, main = 'Unsupervised classification', col = mycolor, type="classes")
+```
+&lt;img src="images/Clustering.png" class="w-70 br4 dib center"&gt;
+
+---
+## Acknowledgment 
+Concept and some codes are adopted form "Aniruddha Ghosh and Robert J. Hijmans"
+
+## Reading Material
+- https://ankitdeshmukh.com/post/
 - https://github.com/anixn/Geospatial_Analysis_with_R.git
 - https://agroimpacts.github.io/geospaar/
+- https://www.usgs.gov/landsat-missions/landsat-enhanced-vegetation-index
+- https://www.datanovia.com/en/blog/top-r-color-palettes-to-know-for-great-data-visualization/
+- https://pro.arcgis.com/en/pro-app/latest/arcpy/image-analyst/gnvdi.htm
+- https://cran.r-project.org/web/packages/HSAUR/vignettes/Ch_introduction_to_R.pdf
+- https://r.geocompx.org/
+- https://rspatial.org/
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
